<resources>
    <string name="app_name">Bugs</string>
    <string name="navigation_rules">Правила</string>
    <string name="rules_title">Правила игры</string>
    <string name="rules_subtitle">Коротко о подготовке, ходе игры и победе</string>
    <string name="navigation_registration">Регистрация</string>
    <string name="navigation_authors">Авторы</string>
    <string name="navigation_settings">Настройки</string>
    <string name="authors_title">Авторы</string>
    <string name="author_matvey_evdokimov">Евдокимов Матвей</string>

    <string name="registration_title">Регистрация игрока</string>
    <string name="registration_subtitle">Заполните профиль перед началом игры</string>

    <string name="registration_full_name_hint">ФИО</string>

    <string name="registration_gender_label">Пол</string>
    <string name="registration_gender_male">Мужской</string>
    <string name="registration_gender_female">Женский</string>

    <string name="registration_course_hint">Курс</string>
    <string-array name="registration_courses">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="registration_difficulty_label">Сложность игры</string>
    <string name="registration_difficulty_easy">Легко</string>
    <string name="registration_difficulty_medium">Средне</string>
    <string name="registration_difficulty_hard">Сложно</string>

    <string name="registration_birth_date_label">Дата рождения</string>

    <string name="registration_submit">Зарегистрировать игрока</string>

    <string name="registration_full_name_required">Укажите ФИО</string>
    <string name="registration_gender_required">Выберите пол</string>
    <string name="registration_course_required">Выберите курс</string>
    <string name="registration_birth_date_required">Укажите дату рождения</string>

    <string name="registration_result_title">Игрок зарегистрирован</string>
    <string name="registration_result_format">ФИО: %1$s\nПол: %2$s\nКурс: %3$d\nСложность: %4$s\nДата рождения: %5$s\nЗнак зодиака: %6$s</string>

    <string name="zodiac_capricorn">Козерог</string>
    <string name="zodiac_aquarius">Водолей</string>
    <string name="zodiac_pisces">Рыбы</string>
    <string name="zodiac_aries">Овен</string>
    <string name="zodiac_taurus">Телец</string>
    <string name="zodiac_gemini">Близнецы</string>
    <string name="zodiac_cancer">Рак</string>
    <string name="zodiac_leo">Лев</string>
    <string name="zodiac_virgo">Дева</string>
    <string name="zodiac_libra">Весы</string>
    <string name="zodiac_scorpio">Скорпион</string>
    <string name="zodiac_sagittarius">Стрелец</string>

    <string name="settings_title">Настройки игры</string>
    <string name="settings_subtitle">Выберите параметры игрового раунда</string>
    <string name="settings_speed">Скорость игры</string>
    <string name="settings_max_cockroaches">Максимум тараканов на экране</string>
    <string name="settings_bonus_interval">Интервал появления бонусов</string>
    <string name="settings_round_duration">Длительность раунда</string>
    <string name="settings_apply">Применить настройки</string>
    <string name="settings_applied">Настройки применены</string>

    <string-array name="settings_speed_values">
        <item>0,5×</item>
        <item>1×</item>
        <item>1,5×</item>
        <item>2×</item>
    </string-array>

    <string-array name="settings_cockroach_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string-array name="settings_bonus_interval_values">
        <item>5 секунд</item>
        <item>10 секунд</item>
        <item>15 секунд</item>
        <item>30 секунд</item>
    </string-array>

    <string-array name="settings_round_duration_values">
        <item>30 секунд</item>
        <item>60 секунд</item>
        <item>90 секунд</item>
        <item>120 секунд</item>
    </string-array>
</resources>
